--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       env:
         EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
       run: |
-        echo "$EC2_SSH_KEY" | base64 -d > /tmp/id_rsa
+        echo "$EC2_SSH_KEY" > /tmp/id_rsa
         chmod 600 /tmp/id_rsa
 
     - name: Deploy to EC2
